# sudoku

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  build.sh  config.sh  linter.sh  sudoku
src/: box.cpp  box.h  defines.h  grid.h  sudoku.cpp  sudoku_grid.cpp  sudoku_grid.h  sudoku_input.cpp  sudoku_input.h  types.h  utils.h
test/: test.cpp  test_valid.grid
test/unfinished/hard/: 1.grid
